fix active tab background dissapearing on small screens

--- a/github-dark.css
+++ b/github-dark.css
@@ -3961,9 +3961,6 @@
     .reponav-wrapper {
       background: #181818 !important;
     }
-    .reponav-item.selected {
-      background: none !important;
-    }
   }
   @media (min-width: 1013px) {
     .Header {
